--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-site: Sidey
+site: peacechild
 url: #yoururl
-title: Sidey
-description: Simple and minimalistic jekyll blogging theme.
+title: peacechild
+description: notes on current readings
 twitter:
   username: #yourusername
   card: summary
